@@ -681,7 +681,6 @@ int pay_for_item(object *op, object *pl);
 int get_payment(object *pl, object *op);
 double shop_specialisation_ratio(object *op, mapstruct *map);
 double shop_greed(mapstruct *map);
-uint64 value_limit(uint64 val, int quantity, mapstruct *map, int isshop);
 int describe_shop(object *op);
 double shopkeeper_approval(mapstruct *map, object *player);
 void sell_item(object *op, object *pl);
