@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+include/sproto.h, server/shop.c - make value_limit static, change its
+arguments to add some checking for NULL pointers
+Brendan Lally 2005-10-06
+
 server/monster.c: In move_monster() prevent hp/sp overflows for monsters with
    very high maxhp/maxsp and very high regeneration rates.
 Andreas Kirschbaum 2005-10-05
